[package]
name = "readability"
description = "Implementaion of Coleman-Liau index in Rust"
authors = ["Hammad Majid <contact@hammadmajid.com>"]
license = "MIT"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/hammadmajid/readability/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
